// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List pending reviews when user is not an owner should fail 1`] = `
Object {
  "error": "Forbidden",
  "message": "Forbidden resource",
  "statusCode": 403,
}
`;

exports[`List pending reviews when user is owner should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "author": Object {
        "name": "Lucinda Reid",
      },
      "canDelete": false,
      "canEdit": false,
      "canReply": true,
      "comment": "Party environment control quality full less painting.",
      "dateVisitted": "2001-07-05",
      "id": "be543903-6fbc-5df3-bd31-4256624cc898",
      "place": Object {
        "address": "262 Franecki Courts",
        "canDelete": true,
        "canEdit": true,
        "canReview": true,
        "id": "05bd7b00-f274-5b91-9c48-08bfa24cb9bd",
        "rating": 0,
        "reviewCount": 0,
        "title": "Nicolas - Satterfield",
      },
      "rating": 2,
    },
    Object {
      "author": Object {
        "name": "Lucinda Reid",
      },
      "canDelete": false,
      "canEdit": false,
      "canReply": true,
      "comment": "Serious inside else memory if six.",
      "dateVisitted": "1986-01-24",
      "id": "93aa6df2-8c47-54b1-8445-4152fe33ab41",
      "place": Object {
        "address": "262 Franecki Courts",
        "canDelete": true,
        "canEdit": true,
        "canReview": true,
        "id": "05bd7b00-f274-5b91-9c48-08bfa24cb9bd",
        "rating": 0,
        "reviewCount": 0,
        "title": "Nicolas - Satterfield",
      },
      "rating": 1,
    },
  ],
  "total": 2,
}
`;

exports[`List pending reviews when user is owner when limit is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": -1,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List pending reviews when user is owner when limit is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": null,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List pending reviews when user is owner when limit is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "author": Object {
        "name": "Lucinda Reid",
      },
      "canDelete": false,
      "canEdit": false,
      "canReply": true,
      "comment": "Party environment control quality full less painting.",
      "dateVisitted": "2001-07-05",
      "id": "be543903-6fbc-5df3-bd31-4256624cc898",
      "place": Object {
        "address": "262 Franecki Courts",
        "canDelete": true,
        "canEdit": true,
        "canReview": true,
        "id": "05bd7b00-f274-5b91-9c48-08bfa24cb9bd",
        "rating": 0,
        "reviewCount": 0,
        "title": "Nicolas - Satterfield",
      },
      "rating": 2,
    },
  ],
  "total": 2,
}
`;

exports[`List pending reviews when user is owner when limit is too large should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": 9000,
      },
      "value": 9000,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List pending reviews when user is owner when offset is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": -1,
        "take": 10,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List pending reviews when user is owner when offset is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": null,
        "take": 10,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List pending reviews when user is owner when offset is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "author": Object {
        "name": "Lucinda Reid",
      },
      "canDelete": false,
      "canEdit": false,
      "canReply": true,
      "comment": "Serious inside else memory if six.",
      "dateVisitted": "1986-01-24",
      "id": "93aa6df2-8c47-54b1-8445-4152fe33ab41",
      "place": Object {
        "address": "262 Franecki Courts",
        "canDelete": true,
        "canEdit": true,
        "canReview": true,
        "id": "05bd7b00-f274-5b91-9c48-08bfa24cb9bd",
        "rating": 0,
        "reviewCount": 0,
        "title": "Nicolas - Satterfield",
      },
      "rating": 1,
    },
  ],
  "total": 2,
}
`;
